# deafchat

./: .env  .env.example  .gitignore  Dockerfile  README.md  check_turn.sh  docker-compose.yml  pyproject.toml  requirements.txt  restart.sh  run.sh  setup_firewall.sh  stop.sh  turnserver.conf
.github/: copilot-instructions.md
.github/prompts/: frontend.prompt.md  seo.prompt.md  sicurezza.prompt.md
backend/: config.py  main.py  models.py  rooms.py  ws.py
frontend/: Dockerfile  chat.html  index.html  nginx.conf  package-lock.json  package.json  robots.txt  sitemap.xml  sw.js  turn-test.html
frontend/css/: style.css
frontend/js/: app.js  chat.js
frontend/public/: sitemap.xml  turn-test.html
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: AppFooter.jsx  AppShell.jsx  BrandHeader.jsx  ChatHeaderBar.jsx  ChatOverlays.jsx  ChatSidebar.jsx  ChatStage.jsx  DeafChatArrivalOverlay.jsx  DeafMailCtaBanner.jsx  DeafNewsCtaBanner.jsx  DeafSuiteCtaBanner.jsx  DeafSuiteTransitionOverlay.jsx  EcosystemCtaSection.jsx  FaqSection.jsx  FeatureGrid.jsx  MatrixRainBackground.jsx  ProjectCtaStack.jsx  RoomCreatorCard.jsx  SectionHeader.jsx  TransitionMatrixRain.jsx
frontend/src/legacy/: initChatPage.js
frontend/src/pages/: ChatPage.jsx  HomePage.jsx
frontend/src/styles/: app.css  theme.css
